<resources>
    <string name="app_name">PDF Reader &amp; Viewer, PDF Tools</string>
    <string name="bottom_title_bookmarks">BookMarks</string>
    <string name="bottom_title_pdf">All PDF</string>
    <string name="bottom_title_recent">Recent</string>
    <string name="bottom_title_tools">Tools</string>
    <string name="EXCEPTION_MERGE_LOCK">Cannot decrypt PDF, the password is incorrect</string>
    <string name="_499_00">₹ 499.00</string>
    <string name="action_cancle">Cancel</string>
    <string name="action_delete">Delete</string>
    <string name="action_select_all">Select All</string>
    <string name="add_free_version">Ads Free Version</string>
    <string name="ads_free">Advertise</string>
    <string name="allpdf">All PDF</string>
    <string name="app_description1">We care about your privacy and data security. We keep this app free by showing ads.</string>
    <string name="app_description2">Can we continue to use your data to tailor ads for you?</string>
    <string name="app_description3">You can change your choice anytime for App in the app settings. Our partners will collect data and use a unique identifier on your device to show you ads.</string>
    <string name="app_name_sub">Plite</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="author">Author</string>
    <string name="browse_pdf">Browse PDF</string>
    <string name="buy_plan">Buy Plan</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="conformpassword">Confirm Password</string>
    <string name="copy_toast_msg">Link copied to clipboard</string>
    <string name="createpdf">Create Pdf</string>
    <string name="creator">Creator</string>
    <string name="crop_image_activity_no_permissions">Cancelling, required permissions are not granted</string>
    <string name="crop_image_activity_title" />
    <string name="crop_image_menu_crop">Crop</string>
    <string name="crop_image_menu_flip">Flip</string>
    <string name="crop_image_menu_flip_horizontally">Flip horizontally</string>
    <string name="crop_image_menu_flip_vertically">Flip vertically</string>
    <string name="crop_image_menu_rotate_left">Rotate counter clockwise</string>
    <string name="crop_image_menu_rotate_right">Rotate</string>
    <string name="dateAescending">Date Ascending</string>
    <string name="dateDescending">Date Descending</string>
    <string name="del_msg">This content will be\10deleted Permanently. Are you sure?\10It cannot be undone.</string>
    <string name="del_msg1">This File will be\10only removed from Recent,not\10permanently</string>
    <string name="delete">Delete</string>
    <string name="details">Details</string>
    <string name="document">File Manager</string>
    <string name="editmetadata">Edit Metadata</string>
    <string name="ef_camera">CAMERA</string>
    <string name="ef_content_desc_folder">Folder</string>
    <string name="ef_content_desc_image">Image</string>
    <string name="ef_done">DONE</string>
    <string name="ef_error_create_image_file">Failed to create image file</string>
    <string name="ef_error_no_camera">No camera found</string>
    <string name="ef_error_null_cursor">Oops, something went wrong!</string>
    <string name="ef_gif">GIF</string>
    <string name="ef_ltitle_permission_denied">Permission denied</string>
    <string name="ef_msg_empty_images">No images found</string>
    <string name="ef_msg_limit_images">Image selection limit</string>
    <string name="ef_msg_no_camera_permission">Please grant camera permission to capture image</string>
    <string name="ef_msg_no_write_external_permission">Please grant storage permission to select images</string>
    <string name="ef_ok">OK</string>
    <string name="ef_permission_write_external_rationale">Allow access external storage to select images</string>
    <string name="ef_selected">%d selected</string>
    <string name="ef_selected_with_limit">%1$d/%2$d selected</string>
    <string name="ef_title_folder">Folder</string>
    <string name="ef_title_select_image">Tap to select images</string>
    <string name="ef_video">Video</string>
    <string name="enterfilename">Enter File Name</string>
    <string name="enterfilenamefirst">First File Name</string>
    <string name="enterfilenamesecond">Second File Name</string>
    <string name="enterwatermarkmessage">Enter Watermark Message</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exit">Exit</string>
    <string name="fav">Favorite</string>
    <string name="file_browser">FILE BROWSER</string>
    <string name="fileinformation">File Information</string>
    <string name="filemanager">File Manager</string>
    <string name="filename">File Name</string>
    <string name="fontcolor">Font Color</string>
    <string name="fontfamiy">Font family</string>
    <string name="fontsize">Font Size</string>
    <string name="fontstyle">Font Style</string>
    <string name="gallery">Gallery</string>
    <string name="generatedPdf">GENERATED</string>
    <string name="generated_pdf">Generated PDF File</string>
    <string name="generatedimages">Generated Images</string>
    <string name="generatedpassword">Generate Password....</string>
    <string name="genrated_pdf">Generated PDF</string>
    <string name="gotopage">Page..</string>
    <string name="horizontal">Horizontal View</string>
    <string name="keywords">Keywords</string>
    <string name="lastmodifie">Last Modified Date</string>
    <string name="let_s_find_some_pdf_in_file_browser">Lets find some PDF in file browser</string>
    <string name="message">Message</string>
    <string name="modifieddate">Modified Date</string>
    <string name="name">Name</string>
    <string name="nameAcending">Name Ascending</string>
    <string name="nameDescending">Name Descending</string>
    <string name="native_body">Body</string>
    <string name="native_headline">Headline</string>
    <string name="native_media_view">Media View</string>
    <string name="noimageavailable">No Image Available</string>
    <string name="non_personalized">No, see ads that are less relevant</string>
    <string name="nopdfavailable">No PDF Found</string>
    <string name="nopdfavailable1">No Data Found</string>
    <string name="ok">OK</string>
    <string name="one_time">One time</string>
    <string name="one_time1">One time /</string>
    <string name="password">Password</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="passwordprotected">Password Protected</string>
    <string name="pdf_reader">PDF Reader</string>
    <string name="pdf_tools">PDF Tools</string>
    <string name="pdftools">PDF TOOLS</string>
    <string name="pdftoolslabel">PdF Tools</string>
    <string name="permissionDisclose">Permission Disclosure</string>
    <string name="personalized">Yes, continue to see relevant ads</string>
    <string name="pick_image_intent_chooser_title">Select source</string>
    <string name="pleasewait">Please Wait....</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="pro_version">Pro Version</string>
    <string name="producer">Producer</string>
    <string name="psf_tools">PDF Tools</string>
    <string name="ptools_addwatermark">Add Watermark</string>
    <string name="ptools_deletePage">Delete Page</string>
    <string name="ptools_editmetadata">Edit Metadata</string>
    <string name="ptools_extractPage">Extract Page</string>
    <string name="ptools_imgtopdf">Image to Pdf</string>
    <string name="ptools_lockpdf">Lock Pdf</string>
    <string name="ptools_merger">Merge Pdf</string>
    <string name="ptools_pdftoimg">Pdf to Image</string>
    <string name="ptools_rotatepage">Rotate Page</string>
    <string name="ptools_split">Split Pdf</string>
    <string name="ptools_unlockpdf">Unlock Pdf</string>
    <string name="purchase">Purchase</string>
    <string name="quit_msg">The changes will not be saved.\10Are you sure you want to quit?</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_experience">Support us by give 5 star\10and write your review</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Maybe later</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_submit">Send</string>
    <string name="rating_dialog_suggestions">Suggest us what went wrong and we\'ll work on it!</string>
    <string name="rationale">We need access to your storage permission for read or write pdf data</string>
    <string name="rationale_ask">This app may not work correctly without the requested permissions.</string>
    <string name="rationale_ask_again">This app may not work correctly without the requested permissions. Open the app settings screen to modify app permissions.</string>
    <string name="rename">Rename</string>
    <string name="renamefile">Rename File</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="sharepicture">Share Picture</string>
    <string name="size">Size</string>
    <string name="sizeAescending">Size Ascending</string>
    <string name="sizeDescending">Size Descending</string>
    <string name="startdate">Start Date</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="strAdsAppId">ca-app-pub-3940256099942544~3347511713</string>
    <string name="subject">Subject</string>
    <string name="termsOfService">Terms Of Service</string>
    <string name="termsOfServiceSummery">This app is governed by Essential Apptech’s Terms of Service. By continuing to use this app you represent that you have read and accept the Terms of Service, Privacy Policy and Permission disclosure.</string>
    <string name="title">Title</string>
    <string name="title_settings_dialog">Permissions Required</string>
    <string name="txt_info">Info</string>
    <string name="unlock_all_the_premium_features_below">Unlock all the Premium Features Below</string>
    <string name="use_permission">Files and Media Permission</string>
    <string name="use_permission_msg">This app needs the activation of an manage external storage permission to can work. Please tap on Grant Permission then switch on and active the permission.</string>
    <string name="version">Free</string>
    <string name="vertical">Vertical View</string>
    <string name="watermark_label_prefix">AdMob - </string>
    <string name="acceptAndContinue">Accept and Continue</string>
</resources>