<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nameAescending"
        android:title="@string/nameAcending"
        app:showAsAction="never" />
    <item
        android:id="@+id/nameDescending"
        android:title="@string/nameDescending"
        app:showAsAction="never" />
    <item
        android:id="@+id/dateAescending"
        android:title="@string/dateAescending"
        app:showAsAction="never" />
    <item
        android:id="@+id/dateDescending"
        android:title="@string/dateDescending"
        app:showAsAction="never" />
    <item
        android:id="@+id/sizeAescending"
        android:title="@string/sizeAescending"
        app:showAsAction="never" />
    <item
        android:id="@+id/sizeDescending"
        android:title="@string/sizeDescending"
        app:showAsAction="never" />
</menu>
