<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_5sdp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:orientation="vertical"
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_22sdp"
                app:cardCornerRadius="@dimen/_20sdp">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:background="@color/toolbarcolor"
                        android:layout_width="match_parent"
                        android:layout_height="40dp">

                        <TextView
                            android:textSize="@dimen/_14sdp"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:id="@+id/title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:text="@string/createpdf"
                             />
                    </LinearLayout>

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/_10sdp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/enterfilename"
                            style="@style/TextViewStyle" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:hintEnabled="false">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/filename"
                                android:backgroundTint="@color/subtextcolor" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:orientation="vertical"
                            android:id="@+id/layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <LinearLayout
                                android:gravity="center"
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/password"
                                    android:layout_weight="1"
                                    style="@style/TextViewStyle" />

                                <androidx.appcompat.widget.SwitchCompat
                                    android:layout_gravity="center"
                                    android:id="@+id/check"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content" />
                            </LinearLayout>

                            <com.google.android.material.textfield.TextInputLayout
                                android:id="@+id/passwordlayout"
                                android:visibility="gone"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:hintEnabled="false"
                                app:passwordToggleEnabled="true">

                                <com.google.android.material.textfield.TextInputEditText
                                    android:id="@+id/password"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/password"
                                    android:inputType="textPassword"
                                    android:backgroundTint="@color/subtextcolor" />
                            </com.google.android.material.textfield.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:id="@+id/save"
                            android:background="@drawable/button_bg"
                            android:layout_width="@dimen/_70sdp"
                            android:layout_height="@dimen/_30sdp"
                            android:layout_marginTop="@dimen/_10sdp">

                            <TextView
                                android:textSize="@dimen/_14sdp"
                                android:textColor="@color/white"
                                android:layout_gravity="center"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/save" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_gravity="right"
                android:id="@+id/close"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:cardElevation="0dp">

                <ImageView
                    android:layout_gravity="center"
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/close" />
            </androidx.cardview.widget.CardView>
        </FrameLayout>
    </LinearLayout>
</LinearLayout>
