<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:elevation="0dp"
    app:cardCornerRadius="@dimen/_15sdp"
    app:cardElevation="0dp">

    <LinearLayout
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingBottom="@dimen/_5sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/pdftoolsView"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/pdf" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/pdftoolslabel" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:id="@+id/rootlayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:layout_gravity="center"
                    android:id="@+id/icon"
                    android:padding="@dimen/_1sdp"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:src="@drawable/pdf" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_weight="1">

                    <TextView
                        android:textSize="@dimen/_14sdp"
                        android:textColor="@color/textcolor"
                        android:ellipsize="middle"
                        android:gravity="center"
                        android:id="@+id/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{model.filename}"
                        android:maxLines="1"
                         />

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp">

                        <TextView
                            android:textSize="@dimen/_11sdp"
                            android:textColor="@color/subtextcolor"
                            android:id="@+id/size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_2sdp"
                            android:text="@{model.fileSizeString}"
                             />

                        <TextView
                            android:textSize="@dimen/_11sdp"
                            android:textColor="@color/subtextcolor"
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@{model.formateData}"
                             />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <include layout="@layout/view_indicator" />


            <include
                android:visibility="gone"
                layout="@layout/view_indicator" />

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/openFile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_bottom_open_file" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="Open File"
                     />
            </LinearLayout>

            <include
                android:visibility="invisible"
                layout="@layout/view_indicator" />

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/favorite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_bottom_bookmark" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:id="@+id/bookmark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="BookMark"
                     />
            </LinearLayout>

            <include
                android:visibility="invisible"
                layout="@layout/view_indicator" />

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/rename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_bottom_rename" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/rename"
                     />
            </LinearLayout>

            <include
                android:visibility="invisible"
                layout="@layout/view_indicator" />

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_bottom_details" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="Details"
                     />
            </LinearLayout>

            <include
                android:visibility="invisible"
                layout="@layout/view_indicator" />

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/password"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/password"
                    app:tint="@color/textcolor" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/password" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/sharepicture"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/pdf" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:text="@string/sharepicture" />
            </LinearLayout>

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_bottom_share" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/share"
                     />
            </LinearLayout>

            <include
                android:visibility="invisible"
                layout="@layout/view_indicator" />

            <LinearLayout
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_10sdp">

                <ImageView
                    android:padding="@dimen/_3sdp"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20sdp"
                    android:src="@drawable/ic_bottom_delete" />

                <TextView
                    android:textSize="@dimen/_14sdp"
                    android:textColor="@color/textcolor"
                    android:layout_gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_15sdp"
                    android:layout_marginBottom="@dimen/_2sdp"
                    android:text="@string/delete"
                     />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
